modifying the api request path to match node
